[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Bullet/Bullet.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 7.0

[sub_resource type="Animation" id=2]
resource_name = "simple"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 12 ), Vector2( 6, 23 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6, -8 ), Vector2( -3, -19 ) ]
}

[node name="Bullet" type="Area2D"]
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -6.0
margin_top = -8.0
margin_right = 6.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( -125, -35 )
color = Color( 0.952941, 0.941176, 0.909804, 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Timer_invinsible" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/simple = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_invinsible" to="." method="_on_Timer_invinsible_timeout"]
